--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -10,9 +10,11 @@ ENV RESIN_MACHINE_NAME %%RESIN_MACHINE_NAME%%
 # Copy the build and run environment
 COPY . /opt/ttn-gateway/
 WORKDIR /opt/ttn-gateway/
+COPY ttn-gateway.service /etc/systemd/system/ttn-gateway.service
 
 # Build the gateway (or comment this out if debugging on-device)
 RUN ./dev/build.sh && rm -rf ./dev
+RUN systemctl daemon-reload
 
 # Start it up
-CMD ["sh", "-c", "./run.py"]
+CMD ["systemctl", "start", "ttn-gateway"]
