--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -22,8 +22,8 @@ ENV RESIN_MACHINE_NAME %%RESIN_MACHINE_NAME%%
 WORKDIR /opt/ttn-gateway
 RUN wget https://ttnreleases.blob.core.windows.net/packet-forwarder/master/imst-rpi-pktfwd.tar.gz
 RUN tar -zxvf imst-rpi-pktfwd.tar.gz
-RUN cp imst-rpi-pktfwd /usr/local/bin/imst-rpi-pktfwd
+RUN cp packet-forwarder /usr/local/bin/imst-rpi-pktfwd
 RUN touch /etc/ttn-gateway.yml
 RUN ./install-systemd.sh /usr/local/bin/imst-rpi-pktfwd /etc/ttn-gateway.yml
 
-CMD ["systemctl", "start", "ttn-gateway"]
+CMD ["systemctl", "start", "ttn-pkt-fwd"]
